<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_calibrate">Calibrate</string>
    <string name="calibration">View Calibration</string>
    <string name="undistortion">View Undistortion</string>
    <string name="comparison">View Comparison</string>
    <string name="preview_mode">Preview mode</string>
    <string name="calibration_successful">Successfully calibrated!\nAvg. re-projection error:</string>
    <string name="calibration_unsuccessful">Unsuccessful calibration.\nTry again</string>
    <string name="more_samples">Please, capture more samples</string>
    <string name="calibrating">Calibrating...</string>
    <string name="please_wait">Please, wait</string>
    <string name="original">Original</string>
    <string name="undistorted">Undistorted</string>
    <string name="cameraengine">OpenCV camera engine</string>
    <string name="camerajava">Android Camera2</string>
    <string name="cameragl">OpenGL ES</string>
    <string name="start_detection">Start</string>
    <string name="calibrator">Calibrator</string>

    <string name="about">
        How to <i>use</i>: select a renderer (you can also calibrate camera with circle calibration pattern) and point your camera on the board (printed or on screen) included with the .apk. When it matches at least 7 of 9 markers, digletts should start showing up. Hold on them to score (tapping is not enough because it will be so slow).
    </string>
    <string name="github">
        Source on github: https://github.com/Furfel/Diglettuco
    </string>
    <string name="twitter">
        Twitter: <a href="https://twitter.com/_furfel">@_furfel</a>
    </string>

</resources>
