<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <org.opencv.android.JavaCameraView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/camera_calibration_java_surface_view" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/addCorner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Corner"
            android:onClick="buttonClick" />
        <Button
            android:id="@+id/calibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibration"
            android:onClick="buttonClick" />
        <Button
            android:id="@+id/calibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_calibrate"
            android:onClick="buttonClick" />
        <Button
            android:id="@+id/undistortion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undistortion"
            android:onClick="buttonClick" />
        <Button
            android:id="@+id/comparison"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comparison"
            android:onClick="buttonClick" />

    </LinearLayout>
    </HorizontalScrollView>


</RelativeLayout>
